[gd_scene load_steps=14 format=3 uid="uid://btup0vbh2kcb"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_7ljo0"]
[ext_resource type="PackedScene" uid="uid://ruywunlp6wqx" path="res://scenes/hitter.tscn" id="2_3cwgs"]
[ext_resource type="PackedScene" uid="uid://bqihefeqqb760" path="res://scenes/school_desk.tscn" id="2_4gq3i"]
[ext_resource type="PackedScene" uid="uid://b8arxaa6u4qve" path="res://scenes/pen.tscn" id="4_o8d7k"]
[ext_resource type="AudioStream" uid="uid://bjybhrcqeuoxn" path="res://assets/bg_music/Push-Long-Version(chosic.com).mp3" id="4_t5qqm"]
[ext_resource type="PackedScene" uid="uid://dkfppnja20st4" path="res://scenes/crowd.tscn" id="5_llepm"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_s7b8c"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_fl6v2"]
sky_material = SubResource("ProceduralSkyMaterial_s7b8c")

[sub_resource type="Environment" id="Environment_tt611"]
background_mode = 2
sky = SubResource("Sky_fl6v2")
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_05ica"]
albedo_color = Color(0.118093, 0.156411, 0.19041, 1)

[sub_resource type="BoxMesh" id="BoxMesh_l0nhr"]
material = SubResource("StandardMaterial3D_05ica")
size = Vector3(2000, 10, 2000)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_shf23"]
data = PackedVector3Array(-1000, 5, 1000, 1000, 5, 1000, -1000, -5, 1000, 1000, 5, 1000, 1000, -5, 1000, -1000, -5, 1000, 1000, 5, -1000, -1000, 5, -1000, 1000, -5, -1000, -1000, 5, -1000, -1000, -5, -1000, 1000, -5, -1000, 1000, 5, 1000, 1000, 5, -1000, 1000, -5, 1000, 1000, 5, -1000, 1000, -5, -1000, 1000, -5, 1000, -1000, 5, -1000, -1000, 5, 1000, -1000, -5, -1000, -1000, 5, 1000, -1000, -5, 1000, -1000, -5, -1000, 1000, 5, 1000, -1000, 5, 1000, 1000, 5, -1000, -1000, 5, 1000, -1000, 5, -1000, 1000, 5, -1000, -1000, -5, 1000, 1000, -5, 1000, -1000, -5, -1000, 1000, -5, 1000, 1000, -5, -1000, -1000, -5, -1000)

[sub_resource type="BoxShape3D" id="BoxShape3D_vi8qo"]
size = Vector3(2000, 10, 2000)

[node name="Main" type="Node3D"]
script = ExtResource("1_7ljo0")
main_menu_scene = "res://scenes/main_menu.tscn"

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 55, 0)

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -100, 55, 0)

[node name="OmniLight3D3" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 55, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tt611")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="SchoolDesk" parent="." instance=ExtResource("2_4gq3i")]

[node name="SchoolFloor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -36, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SchoolFloor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.48098, 0, 0)
mesh = SubResource("BoxMesh_l0nhr")

[node name="StaticBody3D" type="StaticBody3D" parent="SchoolFloor/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SchoolFloor/MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_shf23")

[node name="Area3D" type="Area3D" parent="SchoolFloor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SchoolFloor/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.215939, 0, 0.824863)
shape = SubResource("BoxShape3D_vi8qo")

[node name="PlayerViewCamera" type="Camera3D" parent="."]
transform = Transform3D(0.586737, 0.23168, -0.775928, 0.0478462, 0.946606, 0.318822, 0.808363, -0.22419, 0.544324, -159.672, 39.7062, 63.4457)
size = 100.0

[node name="TopCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 149, 0)
projection = 1
size = 180.0
near = 0.1
far = 1000.0

[node name="Hitter" parent="." instance=ExtResource("2_3cwgs")]
transform = Transform3D(2.51871, 0, 0, 0, 21.0442, 0, 0, 0, 5.45199, 0, 6, -0.0702267)
script = null

[node name="PlayerOne" parent="." instance=ExtResource("4_o8d7k")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -40, 30, 0)

[node name="PlayerTwo" parent="." instance=ExtResource("4_o8d7k")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 40, 30, 0)

[node name="Boundary_Area" type="Area3D" parent="."]

[node name="boundary_poly" type="CollisionPolygon3D" parent="Boundary_Area"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -61.1568)
depth = 50.0
polygon = PackedVector2Array(-171.559, 115.113, -171.305, -8.1906, 166.831, -8.01292, 168.888, 137.138, -171.132, 138.586, -171.857, 116.86, 132.251, 114.027, 131.164, 7.20497, -132.813, 8.2913, -133.899, 115.476)

[node name="Game_background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_t5qqm")

[node name="PlayerScore" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.268429, 94.9433, 71.6058)
visible = false
billboard = 1
modulate = Color(0.852769, 0.847954, 1.54018e-06, 1)
text = "SCORE = "
font_size = 1500
outline_size = 127

[node name="YOULOST" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.268429, 94.9433, -7.21889)
visible = false
billboard = 1
modulate = Color(0.685733, 8.42288e-07, 3.85046e-07, 1)
text = "**YOU LOST!!**
"
font_size = 3000
outline_size = 127

[node name="Crowd_TopNode" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -39, 0)

[node name="Crowd" parent="Crowd_TopNode" instance=ExtResource("5_llepm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -64, 73, -179)

[node name="Crowd2" parent="Crowd_TopNode" instance=ExtResource("5_llepm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -176.418, 73, -131.508)

[node name="Crowd3" parent="Crowd_TopNode" instance=ExtResource("5_llepm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -97.515, 73, -96.7621)

[node name="Crowd4" parent="Crowd_TopNode" instance=ExtResource("5_llepm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 122.755, 73, -145.018)

[node name="Crowd5" parent="Crowd_TopNode" instance=ExtResource("5_llepm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 73, -130.803)

[node name="Crowd6" parent="Crowd_TopNode" instance=ExtResource("5_llepm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 68.7606, 73, -89.5465)

[node name="Crowd7" parent="Crowd_TopNode" instance=ExtResource("5_llepm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -237.655, 73, -45.7898)

[node name="Crowd8" parent="Crowd_TopNode" instance=ExtResource("5_llepm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 182.528, 73, -5.2794)

[node name="Crowd9" parent="Crowd_TopNode" instance=ExtResource("5_llepm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -169.032, 73, 20.7337)

[node name="Crowd10" parent="Crowd_TopNode" instance=ExtResource("5_llepm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 168.776, 73, -77.0446)

[node name="Crowd11" parent="Crowd_TopNode" instance=ExtResource("5_llepm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -76.6049, 73, 90.6009)

[node name="Crowd12" parent="Crowd_TopNode" instance=ExtResource("5_llepm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 74.2629, 73, 92.5206)

[connection signal="body_entered" from="SchoolFloor/Area3D" to="." method="_on_area_3d_body_entered"]
